[gd_scene load_steps=20 format=3 uid="uid://xn2xcqyix308"]

[ext_resource type="Script" path="res://Scripts/castle_door.gd" id="1_4mjvk"]
[ext_resource type="Texture2D" uid="uid://bkn76fqfceevi" path="res://Assets/sprites/objects/castled_door.png" id="2_3rgqd"]
[ext_resource type="Texture2D" uid="uid://ci020mnr7ocvc" path="res://Assets/sprites/objects/objects_02.png" id="3_6hu7c"]
[ext_resource type="PackedScene" uid="uid://bqudavxgfqooj" path="res://Scenes/PersistentDataHelper/PersistentDataHelper.tscn" id="4_bd4cp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_mffkc"]
atlas = ExtResource("2_3rgqd")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kmsb4"]
atlas = ExtResource("2_3rgqd")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ny8h7"]
atlas = ExtResource("2_3rgqd")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_12801"]
atlas = ExtResource("2_3rgqd")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bp8cg"]
atlas = ExtResource("2_3rgqd")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ajos"]
atlas = ExtResource("2_3rgqd")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qmy1h"]
atlas = ExtResource("2_3rgqd")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ycdk"]
atlas = ExtResource("2_3rgqd")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1m88n"]
atlas = ExtResource("2_3rgqd")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b2cke"]
atlas = ExtResource("2_3rgqd")
region = Rect2(192, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_aubm0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mffkc")
}],
"loop": false,
"name": &"closed",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kmsb4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ny8h7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_12801")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bp8cg")
}],
"loop": false,
"name": &"closing",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ajos")
}],
"loop": false,
"name": &"opened",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qmy1h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ycdk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1m88n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b2cke")
}],
"loop": false,
"name": &"opening",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j1k0q"]
size = Vector2(62, 39)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8jn3t"]
radius = 8.0

[sub_resource type="AtlasTexture" id="AtlasTexture_escms"]
atlas = ExtResource("3_6hu7c")
region = Rect2(31, 127, 16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jtcq5"]
size = Vector2(27, 21)

[node name="CastleDoor" type="Node2D"]
script = ExtResource("1_4mjvk")

[node name="AnimatedDoor" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_aubm0")
animation = &"closed"
autoplay = "closed"

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, -11.5)
shape = SubResource("RectangleShape2D_j1k0q")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-23, 3)
shape = SubResource("CapsuleShape2D_8jn3t")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(23, 2)
shape = SubResource("CapsuleShape2D_8jn3t")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(0.5, -10)
texture = SubResource("AtlasTexture_escms")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="InteractArea2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea2D"]
shape = SubResource("RectangleShape2D_jtcq5")
debug_color = Color(0.7, 0, 0.618834, 0.42)

[node name="PersistentDataHelper" parent="." instance=ExtResource("4_bd4cp")]
